# simple-serialization

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  README.md  pyproject.toml
.github/workflows/: test.yaml
serialization/: __init__.py  serialization.py
tests/: test_serialization.py
